--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
 
       # Notify deployment started
       - name: Notify n8n - Deployment Started
-        if: secrets.N8N_WEBHOOK_URL != ''
+        if: secrets.N8N_WEBHOOK_URL
         continue-on-error: true
         run: |
           curl -X POST "${{ secrets.N8N_WEBHOOK_URL }}" \
@@ -83,7 +83,7 @@ jobs:
 
       # Notify deployment success
       - name: Notify n8n - Deployment Success
-        if: success() && secrets.N8N_WEBHOOK_URL != ''
+        if: success() && secrets.N8N_WEBHOOK_URL
         continue-on-error: true
         run: |
           curl -X POST "${{ secrets.N8N_WEBHOOK_URL }}" \
@@ -113,7 +113,7 @@ jobs:
 
       # Notify deployment failure
       - name: Notify n8n - Deployment Failed
-        if: failure() && secrets.N8N_WEBHOOK_URL != ''
+        if: failure() && secrets.N8N_WEBHOOK_URL
         continue-on-error: true
         run: |
           curl -X POST "${{ secrets.N8N_WEBHOOK_URL }}" \
