--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@google/genai": "^1.40.0",
     "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.95.3",
+    "@tensorflow/tfjs": "^4.22.0",
     "@vercel/analytics": "^1.6.1",
+    "axios": "^1.13.5",
     "crypto-js": "^4.2.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-is": "^19.2.4",
-    "recharts": "^3.7.0"
+    "recharts": "^3.7.0",
+    "technicalindicators": "^3.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
