--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,9 @@ numpy
 
 python-dotenv>=1.0.0
 requests>=2.31.0
+supabase>=2.0.0
+joblib>=1.3.0
+
 # Machine Learning
 torch
 # tensorflow (Incompatible with Python 3.14)
