--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
   "framework": "vite",
   "rewrites": [
     {
+      "source": "/api/futures/:path*",
+      "destination": "https://fapi.binance.com/fapi/:path*"
+    },
+    {
       "source": "/api/:path*",
       "destination": "https://api.binance.com/api/:path*"
     },
