--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -2,7 +2,11 @@
 nixPkgs = ["python311", "gcc", "gnumake"]
 
 [phases.install]
-cmds = ["python -m venv .venv", ". .venv/bin/activate", "pip install -U pip", "pip install -r requirements.txt"]
+cmds = [
+    "python -m venv .venv",
+    ".venv/bin/pip install -U pip",
+    ".venv/bin/pip install -r requirements.txt"
+]
 
 [start]
-cmd = "uvicorn main:app --host 0.0.0.0 --port $PORT"
+cmd = ".venv/bin/uvicorn main:app --host 0.0.0.0 --port $PORT"
