cek lagi railwat

--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -5,6 +5,7 @@ nixPkgs = ["python311", "gcc", "gnumake"]
 cmds = [
     "python -m venv .venv",
     ".venv/bin/pip install -U pip",
+    ".venv/bin/pip install torch --index-url https://download.pytorch.org/whl/cpu",
     ".venv/bin/pip install -r requirements.txt"
 ]
 
