--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,7 +10,7 @@ supabase>=2.0.0
 joblib>=1.3.0
 
 # Machine Learning
-torch
+# torch (Installed manually in nixpacks.toml for CPU version)
 scikit-learn>=1.3.0
 websockets>=11.0.3
 aiohttp>=3.8.5
