--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ python-dotenv>=1.0.0
 requests>=2.31.0
 supabase>=2.0.0
 joblib>=1.3.0
+ccxt>=4.1.0
 
 # Machine Learning
 # torch (Installed manually in nixpacks.toml for CPU version)
